<resources>
    <string name="app_name">Rickandmorty</string>

<!--    splash-->
    <string name="splash_label_text">The Rick and Morty</string>

<!--    fragment main-->
    <string name="main_title_text">The Rick and Morty</string>
    <string name="card_title_logo_text">Rick Sanchez</string>
    <string name="card_species_text">Species - Human</string>
    <string name="card_title_species_text">Species -</string>
    <string name="card_status_text">Status - Alive</string>
    <string name="card_title_status_text">Status -</string>

<!--    fragrmnt character-->
    <string name="character_title_logo_text">Amish Cyborg</string>
    <string name="character_status_text">Status - Dead</string>
    <string name="character_title_status_text">Status -</string>
    <string name="character_info_text">Character info:</string>
    <string name="character_name_title_text">Name:</string>
    <string name="character_name_text">Amish Cyborg</string>
    <string name="character_species_title_text">Species:</string>
    <string name="character_species_text">Alien</string>
    <string name="character_type_title_text">Type:</string>
    <string name="character_type_text">Parasite</string>
    <string name="character_gender_title_text">Gender:</string>
    <string name="character_gender_text">Male</string>
    <string name="character_location_title_text">Last known location:</string>
    <string name="character_location_text">Earth (Replacement Dimension)</string>

<!--    network status-->

    <string name="network_error_text">Server connection error</string>

</resources>