<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_color_gradient">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_top_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintBottom_toTopOf="@+id/sv_character"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/color_transparent"
                app:iconPadding="0dp"
                app:icon="@drawable/ic_icon_arrow_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/sv_character"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_top_bar"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_character"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_character"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:text="@string/character_title_logo_text"
                    android:textColor="@color/character_title_logo_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_character">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/item_status"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/background_status_color"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/status_text"
                        style="@style/TextAppearance.Rickandmorty.Inter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/character_status_text"
                        android:textColor="@color/character_status_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/img_status"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_status"
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/img_status"
                        android:tint="@color/card_status_img_red"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/status_text"
                        app:layout_constraintBottom_toBottomOf="@id/status_text" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_logo"
                    style="@style/Style.App.circleImageView"
                    android:layout_width="328dp"
                    android:layout_height="328dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/character_image_logo_background_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_status"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/character_info"
                    style="@style/TextAppearance.Rickandmorty.Headlines6_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/character_info_text"
                    android:textColor="@color/character_info_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_logo" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/character_info">
                    <LinearLayout
                        android:id="@+id/ll_name"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

    <!--                    name-->

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/title_name"
                            style="@style/TextAppearance.Rickandmorty.Roboto_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/character_name_title_text"
                            android:textColor="@color/character_name_title_text"
                            android:layout_marginTop="8dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:visibility="visible"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text_name"
                            style="@style/TextAppearance.Rickandmorty.Roboto_normal_13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/character_name_text"
                            android:textColor="@color/character_name_text"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:visibility="visible"
                            />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/iv_divider_name"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/sheet_divider_color"
                            android:visibility="visible"
                            />

    <!--                    species-->

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/title_species"
                            style="@style/TextAppearance.Rickandmorty.Roboto_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/character_species_title_text"
                            android:textColor="@color/character_species_title_text"
                            android:layout_marginTop="8dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:visibility="visible"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text_species"
                            style="@style/TextAppearance.Rickandmorty.Roboto_normal_13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/character_species_text"
                            android:textColor="@color/character_species_text"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:visibility="visible"
                            />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/iv_divider_species"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/sheet_divider_color"
                            android:visibility="visible"
                            />

    <!--                    type-->

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/title_type"
                            style="@style/TextAppearance.Rickandmorty.Roboto_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/character_type_title_text"
                            android:textColor="@color/character_type_title_text"
                            android:layout_marginTop="8dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:visibility="visible"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text_type"
                            style="@style/TextAppearance.Rickandmorty.Roboto_normal_13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/character_type_text"
                            android:textColor="@color/character_type_text"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:visibility="visible"
                            />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/iv_divider_type"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/sheet_divider_color"
                            android:visibility="visible"
                            />

    <!--                    gender-->

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/title_gender"
                            style="@style/TextAppearance.Rickandmorty.Roboto_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/character_gender_title_text"
                            android:textColor="@color/character_gender_title_text"
                            android:layout_marginTop="8dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:visibility="visible"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text_gender"
                            style="@style/TextAppearance.Rickandmorty.Roboto_normal_13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/character_gender_text"
                            android:textColor="@color/character_gender_text"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:visibility="visible"
                            />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/iv_divider_gender"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/sheet_divider_color"
                            android:visibility="visible"
                            />

    <!--                    location-->

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/title_location"
                            style="@style/TextAppearance.Rickandmorty.Roboto_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/character_location_title_text"
                            android:textColor="@color/character_location_title_text"
                            android:layout_marginTop="8dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:visibility="visible"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text_location"
                            style="@style/TextAppearance.Rickandmorty.Roboto_normal_13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/character_location_text"
                            android:textColor="@color/character_location_text"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:visibility="visible"
                            />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/iv_divider_location"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/sheet_divider_color"
                            android:visibility="visible"
                            />


                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>