<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cl_element_card"
    android:background="@drawable/background_color_gradient"
    android:clickable="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_logo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        style="@style/TextAppearance.Rickandmorty.Subtitles1"
        android:textColor="@color/card_title_logo_text"
        android:text="@string/card_title_logo_text"
        app:layout_constraintStart_toEndOf="@id/image_logo"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon_favorite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="18dp"
        android:src="@drawable/ic_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/species_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        style="@style/TextAppearance.Rickandmorty.Body2"
        android:textColor="@color/card_species_text"
        android:text="@string/card_species_text"
        app:layout_constraintStart_toEndOf="@id/image_logo"
        app:layout_constraintTop_toBottomOf="@id/title_logo"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_status"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/img_status"
        android:tint="@color/card_status_img_green"
        app:layout_constraintStart_toEndOf="@id/image_logo"
        app:layout_constraintTop_toBottomOf="@id/species_text"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        style="@style/TextAppearance.Rickandmorty.Body2"
        android:textColor="@color/card_status_text"
        android:text="@string/card_status_text"
        app:layout_constraintStart_toEndOf="@id/img_status"
        app:layout_constraintTop_toBottomOf="@id/species_text"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="24dp"
        android:background="@color/sheet_divider_color"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>